before responsive design for mainmenusection

--- a/Desktop/FIX/static-webapp/index.html
+++ b/Desktop/FIX/static-webapp/index.html
@@ -18,8 +18,8 @@
 
             <div class="_nav-links">
                 <a class="_active" href="index.html">Home</a>
-                <a href="#">Categories</a>
-                <a href="#">Products</a>
+                <a href="categories.html">Categories</a>
+                <a href="products.html">Products</a>
                 <a href="contact.html">Contacts</a>
             </div>
 
